<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".CameraActivity" >

    <sample.camera.CanvasView
        android:id="@+id/canvas"
        android:layout_width="400dip"
        android:layout_height="300dip" />

    <LinearLayout
        android:id="@+id/palette"
        android:layout_width="60dip"
        android:layout_height="fill_parent"
        android:layout_marginLeft="30dip"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/redbtn"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:background="@drawable/b_red"
            android:contentDescription="@string/b_red" />

        <ImageView
            android:id="@+id/bluebtn"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/b_blue"
            android:contentDescription="@string/b_blue" />

        <ImageView
            android:id="@+id/greenbtn"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/b_green"
            android:contentDescription="@string/b_green" />

        <ImageView
            android:id="@+id/blackbtn"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/b_black"
            android:contentDescription="@string/b_black" />

        <ImageView
            android:id="@+id/whitebtn"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/b_white"
            android:contentDescription="@string/b_white" />
    </LinearLayout>

</LinearLayout>